--- a/Webproject/Views/Blog/BlogReadAll.cshtml
+++ b/Webproject/Views/Blog/BlogReadAll.cshtml
@@ -43,9 +43,9 @@
 
                     </div>
                 }
-                @await Html.PartialAsync("~/Views/Comment/partialAddComment.cshtml", new { id = ViewBag.Id })
                 @await Component.InvokeAsync("CommentListByBlog", new { id = ViewBag.Id })
-                @*@await Html.PartialAsync("~/Views/Comment/CommentListByBlog.cshtml")*@
+                @* @await Html.PartialAsync("~/Views/Comment/CommentListByBlog.cshtml") *@
+                @await Html.PartialAsync("~/Views/Comment/PartialAddComment.cshtml")
 
             </div>
 
