--- a/Webproject/Views/Admin/AdminNavbarPartial.cshtml
+++ b/Webproject/Views/Admin/AdminNavbarPartial.cshtml
@@ -1,25 +1,9 @@
 ﻿<nav class="navbar-default navbar-static-side" role="navigation">
     <div class="sidebar-collapse">
         <ul class="nav metismenu bg-dark" id="side-menu">
-            <li class="nav-header">
-                <div class="dropdown profile-element">
-                    <img alt="image" class="rounded-circle" src="~/inspinia-gh-pages/img/profile_small.jpg" />
-                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                        <span class="block m-t-xs font-bold">Gokhan Cetin</span>
-                        <span class="text-muted text-xs block">Yazilim Muhenisi <b class="caret"></b></span>
-                    </a>
-                    <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                        <li><a class="dropdown-item" href="profile.html">Profile</a></li>
-                        <li><a class="dropdown-item" href="contacts.html">Contacts</a></li>
-                        <li><a class="dropdown-item" href="mailbox.html">Mailbox</a></li>
-                        <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="login.html">Logout</a></li>
-                    </ul>
-                </div>
-                <div class="logo-element">
-                    IN+
-                </div>
-            </li>
+            
+            @await Component.InvokeAsync("AdminNavbarUserInfo")
+
             <li>
                 <a asp-controller="Widget" asp-action="index">
                     <i class="fa fa-th-large"></i>
@@ -97,6 +81,15 @@
                     <i class="fa fa-cog"></i>
                     <span class="nav-label">
                         Ayarlar
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
+            </li>
+            <li>
+                <a asp-controller="AdminRole" asp-action="index">
+                    <i class="fa fa-cog"></i>
+                    <span class="nav-label">
+                        Roller
                     </span>
                     <span class="fa arrow"></span>
                 </a>
